# api-monitoring-platform

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  scheduler.py
alerting/: __init__.py  alert_manager.py  alert_store.py
alerting/notifiers/: base.py  log_notifier.py  webhook_notifier.py
anomaly/: __init__.py  base.py  burst_silence_detector.py  ewma_detector.py  isolation_forest_detector.py  percentile_detector.py  pipeline.py  zscore_detector.py
api/: dependencies.py  router.py  schemas.py
api/routes/: anomaly.py  errors.py  health.py  latency.py  tps.py
classification/: __init__.py  base.py  business_classifier.py  pipeline.py  technical_classifier.py
classification/rules/: business_rules.py  technical_rules.py
common/: constants.py  enums.py  schemas.py
config/: error_codes.py  settings.py
ingestion/: base.py  elasticsearch_ingestor.py  kafka_consumer.py  mock_kafka_consumer.py  normalizer.py  prometheus_ingestor.py
metrics/: __init__.py  aggregator.py  client_profiler.py  geo_tracker.py  latency.py  writer.py
scoring/: __init__.py  risk_scorer.py
storage/: database.py  models.py  redis_client.py  timeseries.py
tests/test_classification/: test_business_classifier.py  test_technical_classifier.py
tests/test_scoring/: test_risk_scorer.py
